--- a/style.css
+++ b/style.css
@@ -25,10 +25,19 @@
     z-index: 5;
 }
 
+header::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 2rem 0;
     font-size: 15px;
 
@@ -37,6 +46,104 @@
 .enough {
     width: 180.05px;
 }
+
+.icons {
+    position: absolute;
+    right: 5%;
+    font-size: 1.5rem;
+    color: #ece0d1;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+@media (max-width: 1000px) {
+    .navbar {
+        justify-content: center;
+        padding: 1rem 5%;
+        gap: 1rem;
+    }
+
+    .enough {
+        width: 0;
+    }
+
+    .section-home {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+
+@media (max-width: 802px) {
+
+    .header {
+        padding-top: 1rem;
+    }
+
+    .icons {
+        display: inline-flex;
+        z-index: 100;
+    }
+
+    .icons #close_icon {
+        display: none;
+    }
+
+    #check:checked~.icons #menu_icon {
+        display: none;
+    }
+
+    #check:checked~.icons #close_icon {
+        display: block;
+    }
+
+    .btn-contact {
+        display: none;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        transition: .3s ease;
+    }
+
+    #check:checked~.navbar {
+        height: 15rem;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, .8);
+    }
+    
+    .navbar a {
+        display: block;
+        margin: 1rem 0;
+        text-align: center;
+    }
+
+    .line {
+        display: none;
+    }
+    
+    .menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .menu a {
+        margin-left: 0;
+    }
+}
+
+
 
 .menu a {
     position: relative;
@@ -342,4 +449,38 @@
     color: #634832;
     font-weight: 500;
     box-shadow: 0 0 30px rgba(0, 0, 0, .1);
+}
+
+@media (max-width: 980px) {
+
+    .infos-about {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        max-width: 900px;
+        text-align: center;
+    }
+
+    .infos-about img {
+        width: 400px;
+    }
+    .card-about {
+        display: none;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .title {
+        font-size: 1.8rem;
+    }
+
+    .first-info, .second-info {
+        max-width: 340px;
+    }
+
+    .infos-about img {
+        width: 340px;
+    }
 }
