--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ header::before {
     content: '';
     position: absolute;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
 }
@@ -95,11 +94,11 @@ header::before {
 }
 
 .home-description {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
 }
 
 .home-description span {
@@ -134,6 +133,7 @@ header::before {
     transition: 0.3s;
     border-radius: 10px;
     font-weight: 500;
+    z-index: 100;
 }
 
 .btn-contact a:hover {
