--- a/style.css
+++ b/style.css
@@ -31,14 +31,16 @@ header::before {
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 100;
 }
 
 .navbar {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 2rem 0;
     font-size: 15px;
-
+    z-index: 100;
 }
 
 .enough {
